# GameEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Maestro.chm  Maestro.sln
Maestro/: Maestro.vcxproj
Maestro/Source/: Maestro.cpp
MaestroEngine/: MaestroEngine.vcxproj  MaestroEngine.vcxproj.filters  MaestroEngine.vcxproj.filters.rej  MaestroEngine.vcxproj.rej
MaestroEngine/Assignments/Assignment1pt2Unity/: Assignment1pt2Unity.csproj  Assignment1pt2Unity.sln
MaestroEngine/Documentation/: ClassDiagram.mdj  Maestro.chm
MaestroEngine/Include/gmtk/: util.h
MaestroEngine/Source/: Audio.cpp  Audio.h  Bounds.h  Component.cpp  Component.h  ComponentHandle.hpp  Composable.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityHandle.cpp  EntityHandle.h  GameMode.cpp  GameMode.h  Graphics.cpp  Graphics.h  Handle.cpp  Handle.h  Logging.h  Maestro.cpp  Maestro.h  Music.cpp  ObjectFactory.cpp  ObjectFactory.h  Physics.cpp  Physics.h  PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h  SceneGraph.cpp  SceneGraph.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  System.cpp  System.h  Transform.cpp  (+2 more)
MaestroEngine/src/: Audio.cpp  Engine.h  EntityHandle.h  RigidBody.cpp  Sprite.cpp  Transform.h
MaestroGame/: MaestroGame.vcxproj  MaestroGame.vcxproj.filters
MaestroGame/Source/: Application.cpp  TestGameMode.hpp
MaestroTest/: MaestroTest.vcxproj
MaestroTest/Source/: Application.cpp
maestro/: maestro.vcxproj  maestro.vcxproj.filters
maestro-engine/: CMakeLists.txt  SDL2Config.cmake
maestro-engine/doc/: Maestro.chm
maestro-engine/include/gmtk/: util.h
maestro-engine/src/: Component.cpp  Component.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityHandle.h  GameMode.h  IUpdatable.h  Logging.h  Maestro.h  ObjectFactory.cpp  SceneGraph.cpp  System.h  Transform.cpp  manager.h  ref.h
maestro-tests/: CMakeLists.txt
maestro-tests/src/: Main.cpp
maestro/src/: Bounds.h  Engine.cpp  Engine.h  Graphics.cpp  Music.h  Physics.cpp  SceneGraph.h  Sound.cpp  System.h
(+23 files in other folders)
